--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -17,8 +17,10 @@
     /* --primary: 0 0% 9%; */
     --primary: 19 100% 50%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
+    /* --secondary: 0 0% 96.1%; */
+    --secondary: 234 41% 41%;
+    /* --secondary-foreground: 0 0% 9%; */
+    --secondary-foreground: 40 100% 99%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
